# cmpi-bindings

./: CMakeLists.txt
package/: cmpi-bindings.changes  cmpi-bindings.spec.in
src/: target_python.c
swig/: CMakeLists.txt  cmpi.i
swig/python/: CMakeLists.txt
