#
# CMakeLists.txt for cmpi-bindings/swig
#

enable_testing()

IF (BUILD_PYTHON3)
  MESSAGE(STATUS "Building Python 3 ...")
  ADD_SUBDIRECTORY(python)
ELSEIF (BUILD_PYTHON2)
  MESSAGE(STATUS "Building Python 2 ...")
  ADD_SUBDIRECTORY(python)
ELSE (BUILD_PYTHON2)
  MESSAGE(STATUS "*****")
  MESSAGE(STATUS "\tSkipping Python build")
  MESSAGE(STATUS "*****")
ENDIF (BUILD_PYTHON3)

FIND_PACKAGE(Perl)
IF (PERL_EXECUTABLE)
  MESSAGE(STATUS "Building Perl...")
  ADD_SUBDIRECTORY(perl)
ENDIF (PERL_EXECUTABLE)

FIND_PACKAGE(Ruby)
IF (RUBY_LIBRARY AND RUBY_INCLUDE_PATH)
  MESSAGE(STATUS "Building Ruby...")
  ADD_SUBDIRECTORY(ruby)
  OPTION( BUILD_RUBY_GEM "Build Ruby GEM" YES )
ENDIF (RUBY_LIBRARY AND RUBY_INCLUDE_PATH)
